10_container/02_kind_mesh/manifests/overlays/istio-sidecar/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-sidecar-app
  labels: { istio-injection: enabled }
