10_container/02_kind_mesh/manifests/overlays/istio-sidecar/peerauth.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata: { name: default }
spec: { mtls: { mode: STRICT } }
